# SLEngine_BGFX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
Dependencies/: CMakeLists.txt
Dependencies/imgui/: CMakeLists.txt
Dependencies/imgui/Include/backends/: imgui_impl_bgfx.h
Dependencies/imgui/Source/backends/: imgui_impl_bgfx.cpp
Games/: CMakeLists.txt
Games/Include/: RobotsGame.h
Games/Sources/: RobotsGame.cpp  main.cpp
SLEngine/: CMakeLists.txt
SLEngine/Include/SLEngine/: Debug.h  DebugGUI.h  GameCore.h  Input.h  MeshRenderer.h
SLEngine/InternalInclude/SLEngine/Internal/: DebugGUI.h  Graphics.h  IndexBuffer.h  Input.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
SLEngine/Sources/: Debug.cpp  DebugGUI.cpp  GameCore.cpp  Graphics.cpp  IndexBuffer.cpp  Input.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
cmake/: CMakeLists.txt
